<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<ImageView
		android:id="@+id/bg"
		android:scaleType="fitCenter"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
	/>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	
		<ImageView 
			android:id="@+id/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		
	</RelativeLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center_vertical|center_horizontal"
		android:orientation="vertical"	>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
			<Button
				android:id="@+id/new_game_butt"
				android:text="@string/new_game"
				android:textSize="30sp"
				android:layout_width="250dp"
				android:layout_height="61dp"
				android:layout_marginBottom="10sp"
				
				android:background="@drawable/buttonshape"
				android:shadowColor="#A8A8A8"
				android:shadowDx="2"
				android:shadowDy="2"
				android:shadowRadius="5"		/>
			<ImageView 
				android:id="@+id/anim"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
			<Button
				android:id="@+id/score_butt"
				android:text="@string/top_score"
				android:textSize="30sp"
				android:layout_width="250dp"
				android:layout_height="61dp"
				android:layout_marginBottom="10sp"
				android:background="@drawable/buttonshape"
				android:shadowColor="#A8A8A8"
				android:shadowDx="2"
				android:shadowDy="2"
				android:shadowRadius="5"		/>
			<ImageView 
				android:id="@+id/anim2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
			<Button
				android:id="@+id/settings_butt"
				android:text="@string/settings"
				android:textSize="30sp"
				android:layout_width="250dp"
				android:layout_height="61dp"
				android:layout_marginBottom="10sp"
				android:background="@drawable/buttonshape"
				android:shadowColor="#A8A8A8"
				android:shadowDx="2"
				android:shadowDy="2"
				android:shadowRadius="5"		/>
			<ImageView 
				android:id="@+id/anim3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
			<Button
				android:id="@+id/exit_butt"
				android:text="@string/end_butt"
				android:textSize="30sp"
				android:layout_width="250dp"
				android:layout_height="61dp"
				android:layout_marginBottom="10sp"
				android:background="@drawable/buttonshape"
				android:shadowColor="#A8A8A8"
				android:shadowDx="2"
				android:shadowDy="2"
				android:shadowRadius="5"		/>
			<ImageView 
				android:id="@+id/anim4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			
		</RelativeLayout>
	</LinearLayout>
	
	
</FrameLayout>